objects/Distributor_Top_Fund_List__c/Distributor_Top_Fund_List__c.object-meta.xml
<CustomObject>
    <description>WAM CRM - to track the 5 top fund list of the distributor</description>
    <label>Distributor Top Fund</label>
    <nameField>
        <displayFormat>Fund-{0000}</displayFormat>
        <label>Distributor Top Fund List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distributor Top Funds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>