objects/Distributor_Top_Fund_List__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Display Distributor Top Fund</description>
    <inlineHelpText>Display Distributor Top Fund</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Distributor_Top_Fund_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>