objects/Distributor_Top_Fund_List__c/fields/Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name__c</fullName>
    <label>Fund Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>