objects/Distributor_Top_Fund_List__c/fields/Fund_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Fund_Name_Link__c</fullName>
    <formula>HYPERLINK("/" &amp;Id,  Fund_Name__c, "_self")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Name</label>
    <type>Text</type>
</CustomField>