objects/Distributor_Top_Fund_List__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>